--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
 <% if current_user %>
   Logged in as <%= current_user.email %>.
+  <!-- erb: paste this in view -->
+  <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
   <%= link_to 'Log Out', logout_path %>
 <% else %>
   <%= link_to 'Sign Up', signup_path %> or
   <%= link_to 'Log In', login_path %>
 <% end %>
 <p id='notice'><%= notice %></p>
-<h1>HELLO WORLD</h1>
