--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <% if current_user %>
   Logged in as <%= current_user.email %>.
   <!-- erb: paste this in view -->
-  <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
+  <%= react_component("HelloWorld", { greeting: "Hello from react-rails. NAME: #{current_user.first_name} #{current_user.last_name}" }) %>
   <%= link_to 'Log Out', logout_path %>
 <% else %>
   <%= link_to 'Sign Up', signup_path %> or
