Set up sign up, login, logout flow

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("RootComponent", { current_user: current_user }) %>
+<%= react_component("RootComponent", { id: current_user ? current_user.id : nil  }) %>
