Change email font color

--- a/app/views/team_lead_mailer/intervention_email.html.erb
+++ b/app/views/team_lead_mailer/intervention_email.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body style="font-family:helvetica; color:#3d1452;">
+  <body style="font-family:helvetica; color:#2c2c2c;">
     <h2 style="font-weight: 500">Question: "<%= @question_text %>"</h2>
     <br>
     <iframe src="https://giphy.com/embed/LMUOHJCNPvN4I" width="480" height="246" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/how-i-met-your-mother-cbs-LMUOHJCNPvN4I"></a></p>
