Email styling change

--- a/app/views/team_lead_mailer/intervention_email.html.erb
+++ b/app/views/team_lead_mailer/intervention_email.html.erb
@@ -9,7 +9,7 @@
     <iframe src="https://giphy.com/embed/LMUOHJCNPvN4I" width="480" height="246" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/how-i-met-your-mother-cbs-LMUOHJCNPvN4I"></a></p>
     <p>
       Results: <%= @yes_votes_count %> out of <%= @total_votes %> team members from <%=@project_name%>
-      have answered 'yes'.<br>
+      have answered "yes".<br>
     </p>
     <br>
     <br>
